OS/161 was written by David A. Holland, with contributions from
	Amos Blackman
	Alexandra Fedorova
	Ada T. Lim
	Georgi Matev
	Jay Moorthi
	Geoffrey Werner-Allen

Additional small patches and bug reports have been contributed by
various other people, all of whom are (hopefully) listed below.

------------------------------------------------------------

20050913 dholland	OS/161 1.11 released.
20050907 dholland	Minor changes for clean build under gcc 4.0.1.
20050321 dholland	Add volatile to testbin/ctest. (found by Qicheng Ma)
20050307 dholland	Create <machine/ktypes.h> for vaddr_t/paddr_t.
20050228 dholland	Some standards compliance. (found by R.L. West)
20040510 dholland	Fix args handling in testbin/tail. (Lukasz Strozek)
20040204 dholland	Be more consistent about refcounts in vfscwd.c.

20040203 dholland	OS/161 1.10 released.
20040203 dholland	Support for hosting OS/161 on Solaris.
20040202 dholland	Update stdarg.h for gcc 3.x; remove machine/stdarg.h.

20031227 dholland	OS/161 1.09 released.
20031224 dholland	Add missing man page for triplesort.
20031224 dholland	Fix failed compile in lnet.c, currently a null driver.
20031224 dholland	Fix badcall so it doesn't blow up on empty stdin.
20031224 dholland	Fix argument handling in bin/ln. (Hassan Sultan)
20031224 dholland	Fix link count leak in sfs_rename. (Brian Greenberg)
20031224 dholland	Fix silly use-after-free in an SFS mount error path.
20031224 dholland	Fix unaligned sections in dumbvm. (Mike Hamburg)
20031224 dholland	Change "asst1probs" to "synchprobs".
20031224 dholland	Refer to assts by content, not number, where possible.
20031224 dholland	Fix some nonsensical but working code in /bin/pwd.
20031224 dholland	Update stack assertions in mips/trap.c for 4k stacks.
20031224 dholland	Install kernels using their configuration name.
20031224 dholland	Clarify some aspects of the locks/CVs API.
20031224 dholland	Fix assorted comment typos and glitches.