@@ -9,7 +9,10 @@ start and test their implementation.
 updates
 -------
 
+* added OPT_BADSYNCH to aid with output synchronization during asst0
+* added btree and console to testbin
 * make git-zip will create a tar.gz file of this repository
 * updated multiply to take more than 2 arguments
-* added draw, factsum, and vectormult
+* added addexec, draw, factsum, and vectormult to testbin
+* improved make process so depend.mk does not need to be checked into repository.
 
