@@ -424,6 +424,13 @@ defoption netfs
 # Note that "emufs" is completely contained in the "emu" device.
 #
 
+############################################
+#                                          #
+#   Asst0 temporary menu synchronization   #
+#                                          #
+############################################
+
+defoption badsynch
 
 ########################################
 #                                      #
