@@ -1,0 +1,9 @@
+# Makefile for conman
+
+SRCS=console.c
+PROG=console
+BINDIR=/testbin
+
+include ../../defs.mk
+include ../../mk/prog.mk
+
